2023/08/15 fix .html file problem

--- a/en/main/story/main/1/1/2.html
+++ b/en/main/story/main/1/1/2.html
@@ -179,7 +179,7 @@ Story<br/>Volume 1<br/>Chapter 1<br/>Episode 2</td>
     <p>Descriptions:</p>
     <ul>
         
-            <li>Shiroko rescues Sensei and eventually the two arrive at Abydos' Foreclosure Task Force club room. Soon after, the school is attacked by the Kata-Kata Helmet Gang, and Sensei teams up with the students to fight back.</li>
+            <li>老师被白子救出来之后，抵达阿拜多斯高中的废校对策委员会社团活动室。然而当时片方头盔圈却来攻击阿拜多斯高中，于是老师就和学生们一起出面击退他们。</li>
         
     </ul>
 
