--- a/en/main/story/main/2/1/8.html
+++ b/en/main/story/main/2/1/8.html
@@ -245,7 +245,7 @@ Story<br/>Volume 2<br/>Chapter 1<br/>Episode 8</td>
 
     
         <h3>The Arrival of Yuuka</h3>
-        <p>Description: Yuuka visited the Department and met Aris. Pretty surprised, she said that she had never met such an adorable child. Midori mentioned about the closure stuff; Yuuka said that due to a change on procedure, the eligibility review is inevitable. Yuuka immediately started her questioning.</p>
+        <p>Description: 优香视察游戏开发部，遇见了爱丽丝。优香表示自己从来没见过这么可爱的孩子，桃井立刻提出废社事宜。优香表示由于程序变更，资格审查不可避免；她随即开始了对爱丽丝的提问。Yuuka visited the Department and met Aris. She said that she had never met such an adorable child, </p>
         <h4>Characters</h4>
         
     <ul>
