--- a/en/main/story/main/2/1/9.html
+++ b/en/main/story/main/2/1/9.html
@@ -385,7 +385,7 @@ Story<br/>Volume 2<br/>Chapter 1<br/>Episode 9</td>
 
     
         <h3>For the Club</h3>
-        <p>Description: After Yuuka left, Yuzu got out of her wardrobe, stating that she would like to go to the Ruins to find the book G.Bible. She agreed the idea of protecting the club together purposed by Momoi and Midori.</p>
+        <p>Description: 优香走后，柚子从柜子里出来，表示要前往废墟找到《G.Bible》一书。她同意桃井和绿两人的想法，想要一起保护社团。After Yuuka left, Yuzu got out of her wardrobe, stating that she would like to go to the Ruins to find the book G.Bible. She agreed the idea of protecting the club together purposed by Momoi and Midori.</p>
         <h4>Characters</h4>
         
     <ul>
