--- a/en/main/story/main/1/1/1.html
+++ b/en/main/story/main/1/1/1.html
@@ -179,7 +179,7 @@ Story<br/>Volume 1<br/>Chapter 1<br/>Episode 1</td>
     <p>Descriptions:</p>
     <ul>
         
-            <li>老师读了阿拜多斯高中寄来的信后，得知学生们受到暴力组织欺压的消息，于是便前往阿拜多斯自治区帮助他们，但却一下子就迷路遇难了。</li>
+            <li>Sensei receives a letter from Abydos High School and learns the students there are being bullied by a criminal organization. In a hurry, Sensei heads toward the Abydos district, but gets hopelessly lost in the process.</li>
         
     </ul>
 
